
2015-January-02 Struan Robertson

	* CollisionOperator.cpp: Initial implementation of phenomenological 
	rate equation integration method.
 	
2015-January-02 Struan Robertson

	* BoltzmannDistribution.cpp: Altered initial distribution method to 
	allow Boltzmann distribution to use a prescribed temperature. If 
	temperature not specified, the temperature specified by the condition 
	manager will be used.
 	
2014-December-29 Struan Robertson

	* SensitivityAnalysis.cpp: Added Legendre polynomials for the 
	RS-HDMR sensitivity analysis algorithm.
	
2014-December-19 Struan Robertson

	* gDensityOfStates.cpp/.h, QMRotors.cpp: Added warning that heavy 
	asymmetric top states are expensive to calculated using QM methods.
	
2014-October-19 Struan Robertson

	* CollisionOperator.cpp/.h: Added implementation of method to calculate
	equilibrium fractions for systems with a second order reaction.
	
	* ThermodynamicTable.cpp: ALtered so that enthalpy is measured relative to 
	298.15 K value, to allow comparison with JANAF tables.	 

	* Documentation: Content added regarding refReaction keyword.

2014-September-27 Struan Robertson

	* examples/Methyl_H_to_Methane: Added two test files (used in the 
	investigation of back reaction effects). 

2014-September-26 Robin Shannon

	* examples/Methyl_H_to_Methane/Methyl_H_to_Methane_ftst.xml: Restore previous 
	version of file

2014-September-25 Robin Shannon

	* src/MesmerMath.cpp, MesmerMath.cpp, TMatrix.h: Addition of cholesky 
	decomposition and inverse cumulative distribution methods.

	* src/plugins/FittingUtils.cpp, FittingUtils.h, Marquardt.cpp: Printing 
	correlated distribution from fitting marquardt fitting in xml output. 

2014-September-11 Chris Morley

	* src/MolecularComponents.cpp, defaults.xml: remove default ZPE and do
	not require sink products to have a value of ZPE and some other
	properties (unless ILT or some tunnelling).

	* src/BimolecularSinkReaction.cpp,src/IrreversibleExchangeReaction.cpp,